JSAI/error/src/test/resources/base/j007.js
// Math = function() { print("math"); return 2 + 2 };
print("done");
